force-app/main/default/objects/OrderMaximumLimit__c/OrderMaximumLimit__c.object-meta.xml
<CustomObject>
    <label>注文上限</label>
    <nameField>
        <label>注文上限名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>