force-app/main/default/objects/OrderMaximumLimit__c/fields/ChatterDelivery__c.field-meta.xml
<CustomField>
    <fullName>ChatterDelivery__c</fullName>
    <label>チャーター便</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>