force-app/main/default/objects/OrderMaximumLimit__c/fields/DeliveryArea__c.field-meta.xml
<CustomField>
    <fullName>DeliveryArea__c</fullName>
    <label>配送エリア</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeliveryArea</valueSetName>
    </valueSet>
</CustomField>