force-app/main/default/objects/OrderMaximumLimit__c/fields/ScheduledRouteService__c.field-meta.xml
<CustomField>
    <fullName>ScheduledRouteService__c</fullName>
    <label>路線便</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>