force-app/main/default/objects/OrderMaximumLimit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ScheduledRouteService__c</columns>
    <columns>ChatterDelivery__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>